# undoable

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/undoable/: Command.h  Factory-inl.h  Factory.h  Fragment.h  History.h  ListProperty-inl.h  ListProperty.h  Object.h  OwningListProperty-inl.h  OwningListProperty.h  OwningRefProperty.h  Property-inl.h  Property.h  RefProperty.h  Registry.h  Tracked.h  UniquePtr.h  ValueProperty-inl.h  ValueProperty.h
src/: Factory.cpp  Fragment.cpp  History.cpp  ListProperty.cpp  Object.cpp  Property.cpp  RefProperty.cpp  Registry.cpp  Tracked.cpp
test/: FragmentTest.cpp  HistoryTest.cpp  ListPropertyTest.cpp  ObjectTest.cpp  OwningListPropertyTest.cpp  OwningRefPropertyTest.cpp  RefPropertyTest.cpp  TestUtils.h  TestValueProperty.cpp  TransactionTest.cpp  ValuePropertyTest.cpp  example.cpp  main.cpp  test.cpp
test-utils/: TestUtils.h  main.cpp
